--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Plack::Middleware::Debug::Profiler::NYTProf
 
+0.03    Mon Oct 11 22:00:13 2010
+        - cpan account
+
 0.02    Mon Oct 11 22:00:13 2010
         - cpan upload
 
